# cpp-romancal

./: .appveyor.yml  .travis.yml  Makefile.am  README.md  autogen.sh  configure.ac
doc/: Doxyfile.in  genheader.tex
include/: romancal.h
src/: Makefile.am  libromancal.pc.in  main.c  romancal.c  romancal.h
tests/: Makefile.am  testmain4catch.cpp  testmain4check.c  testromancal.c  testutils.h
